--- a/index.html
+++ b/index.html
@@ -1121,9 +1121,7 @@ function extinguish() {
   cigaretteWrap.classList.remove('visible');
   hint.textContent = state.isOpen ? 'Flick the wheel to ignite 🔥' : 'Swipe up to open · Flick wheel to light';
 }
-
-// Wheel interaction
-// Swipe detection on lighter body - ΒΕΛΤΙΩΜΕΝΗ ΕΚΔΟΣΗ
+  // Swipe & tap on lighter - FIXED & CLEAN VERSION
 let touchStartY = null;
 let touchStartX = null;
 
@@ -1131,12 +1129,12 @@ lighterContainer.addEventListener('touchstart', e => {
   if (e.touches.length !== 1) return;
   touchStartY = e.touches[0].clientY;
   touchStartX = e.touches[0].clientX;
-  e.preventDefault();           // ← Σταματάει το scroll/bounce
-}, { passive: false });         // ← passive: false είναι απαραίτητο για preventDefault
+  e.preventDefault();
+}, { passive: false });
 
 lighterContainer.addEventListener('touchmove', e => {
   if (touchStartY === null) return;
-  e.preventDefault();           // ← Πολύ σημαντικό για smooth swipe χωρίς scroll
+  e.preventDefault();
 }, { passive: false });
 
 lighterContainer.addEventListener('touchend', e => {
@@ -1145,7 +1143,7 @@ lighterContainer.addEventListener('touchend', e => {
   const dy = touchStartY - e.changedTouches[0].clientY;
   const dx = Math.abs(touchStartX - e.changedTouches[0].clientX);
 
-  // Swipe up (πιο εύκολο - threshold 20 pixels)
+  // Swipe up (άνοιγμα + άναμμα)
   if (dy > 20 && dx < 50) {
     if (!state.isOpen) {
       openLid();
@@ -1153,13 +1151,13 @@ lighterContainer.addEventListener('touchend', e => {
       ignite();
     }
   }
-  // Swipe down (πιο εύκολο κλείσιμο)
+  // Swipe down (κλείσιμο)
   else if (dy < -20 && dx < 50) {
     if (state.isOpen) {
       closeLid();
     }
   }
-  // Tap / μικρή κίνηση → toggle lid
+  // Tap (μικρή κίνηση → toggle)
   else if (Math.abs(dy) < 15 && dx < 30) {
     if (!state.isOpen) {
       openLid();
@@ -1172,9 +1170,17 @@ lighterContainer.addEventListener('touchend', e => {
   touchStartX = null;
 }, { passive: false });
 
+// Extra: click fallback για καλύτερο handling
+lighterContainer.addEventListener('click', e => {
+  e.preventDefault();
+  if (!state.isOpen) {
+    openLid();
+  } else {
+    closeLid();
+  }
+});
 
-
-wheelGroup.addEventListener('click', e => {
+  wheelGroup.addEventListener('click', e => {
   e.stopPropagation();
   if (!state.isOpen) { openLid(); return; }
   playSpark();
